tests/ui/pattern/no-patterns-in-args.stderr
error: expected one of `:`, `@`, or `|`, found `)`
  --> $DIR/no-patterns-in-args.rs:10:13
   |
LL |     fn g3(u8);
   |             ^ expected one of `:`, `@`, or `|`
   |
help: if this is a parameter name, give it a type
   |
LL |     fn g3(u8: TypeName);
   |             ++++++++++
help: if this is a type, explicitly ignore the parameter name
   |
LL |     fn g3(_: u8);
   |           ++

error[E0642]: parameters can't have complex patterns in function pointer types
  --> $DIR/no-patterns-in-args.rs:14:14
   |
LL | type A2 = fn(&arg: u8);
   |              ^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL - type A2 = fn(&arg: u8);
LL + type A2 = fn(_: u8);
   |

error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/no-patterns-in-args.rs:5:11
   |
LL |     fn f1(mut arg: u8);
   |           ^^^^^^^ pattern not allowed in foreign function

error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/no-patterns-in-args.rs:6:11
   |
LL |     fn f2(&arg: u8);
   |           ^^^^ pattern not allowed in foreign function

error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/no-patterns-in-args.rs:7:11
   |
LL |     fn f3(arg @ _: u8);
   |           ^^^^^^^ pattern not allowed in foreign function

error[E0561]: patterns aren't allowed in function pointer types
  --> $DIR/no-patterns-in-args.rs:13:14
   |
LL | type A1 = fn(mut arg: u8);
   |              ^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0130, E0561, E0642.
For more information about an error, try `rustc --explain E0130`.
